# tiny-serve

./: Cargo.toml  LICENSE  README.md
src/: main.rs
